--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-user" id="myspan"></span> Degranon</a>
+                <a class="navbar-brand" href="https://github.com/KrashV" target="_blank"><span class="glyphicon glyphicon-user" ></span> Degranon</a>
             </div>
             <!-- Navbar links -->
             <div class="collapse navbar-collapse" id="navbar">
                 <ul class="nav navbar-nav">
                     <li class="active">
-                        <a href="https://github.com/KrashV/Starbound-ColorableCustomClothes/blob/master/README.md">Guide</a>
+                        <a href="https://github.com/KrashV/Starbound-ColorableCustomClothes/blob/master/README.md"  target="_blank">Guide</a>
                     </li>
                     <li>
-                        <a href="https://github.com/KrashV/Starbound-ColorableCustomClothes/releases">Download</a>
+                        <a href="https://github.com/KrashV/Starbound-ColorableCustomClothes/releases"  target="_blank">Download</a>
                     </li>
                 </ul>
             </div>
