Added the shitty icon

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
 
     <title>Colorable Clothes</title>
-
+	<link rel="shortcut icon" type="image/ico" href="favicon.ico">
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
