--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 				<span class="glyphicon glyphicon-arrow-right"></span>
 				<input class="jscolor {onFineChange:'updateColor(this, [111,41,25])'}" value="6f2919" id="6f2919">
 			
-			<h3 class="content-header">Save the result</h3>
-			<button id="btnSave" class="btn btn-default">Save</button>
+			<h3 class="content-header">Copy the result</h3>
+			<p><textarea id="result" readonly style="resize:none;width: 300px;height:500px;"></textarea>
 		</div><!--/Left Column-->
 
 
